--- a/Sistema Academico/Sistema Academico/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Sistema Academico/Sistema Academico/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,15 +1,15 @@
 ﻿@model Sistema_Academico.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
+<h4>Olvido su pin?</h4>
 <hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
         <div>
             <p>
-                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
+                Para recuperar su contraseña o pin click en <a href="https://procesos.intec.edu.do/Usuario/EnvioContrase%C3%B1a">Recupere su Contraseña</a>
+                .
             </p>
         </div>
     }
