--- a/Sistema Academico/Sistema Academico/Views/Shared/_Layout.cshtml
+++ b/Sistema Academico/Sistema Academico/Views/Shared/_Layout.cshtml
@@ -17,13 +17,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Intec", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Sobre la pagina", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Seleccion", "Select", "Home" )</li>
+                    <li>@Html.ActionLink("Oferta Academica", "Offer", "Home")</li>
+                    
+                    
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
